--- a/connexion.html
+++ b/connexion.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="js/main.js">
 </head>
 
 <!-- BODY -->
@@ -54,6 +53,8 @@
     </footer>
 
     <!-- END FOOTER -->
+
+    <script src="js/main.js"></script>
 
 </body>
 
