--- a/connexion.html
+++ b/connexion.html
@@ -20,14 +20,14 @@
             <p><strong>Connectez-vous au service de gestion</strong></p>
         </div>
             <div class="con-form">
-            <form method="POST" action="fournisseurs.html">
+            <form method="POST" action="fournisseur">
 
                 <input type="email" id="email" name="email" placeholder="Nom d'utilisateur" class="inputbasic"
                     maxlength="30" required><br>
 
                 <input type="password" id="password" name="password" placeholder="Mot de passe" class="inputbasic"
                     maxlength="30" required><br>
-
+                
                 <input type="submit" id="submit" name="submit" value="S'identifier" />
             </form>
         </div>
