--- a/fichedetaillee.html
+++ b/fichedetaillee.html
@@ -15,9 +15,12 @@
 </head>
 
 <body>
+
+    <!-- CONTAINER -->
     <div class="container fournisseur-page">
         <h1>Fiche détaillée</h1>
 
+        <!-- DETAILS CARD -->
         <div class="card" style="width: 100%;">
             <div class="card-header header-fiche">
                 Lorem
@@ -35,15 +38,19 @@
                     width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </ul>
         </div>
+        <!-- END-DETAILS CARD -->
 
+        <!-- BUTTONS -->
         <div class="buttons">
             <form>
                 <input type="button" value="Retour" class="btn" onClick="history.back()">
             </form>
         </div>
+        <!-- END-BUTTONS -->
 
     </div>
 
+    <!-- END-CONTAINER -->
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -55,7 +62,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-        <script src="js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
