--- a/fournisseurs.html
+++ b/fournisseurs.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Liste des fournisseurs</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -76,7 +76,7 @@
     </table>
 
     <div class="buttons"style="display:flex; justify-content:space-between;">
-      <form method="GET" action="ajouter.html">
+      <form method="GET" action="/ajouter">
         <input type="submit" class="btn btn-primary" id="ajouter" name="ajouter" value="Ajouter" />
 
       </form>
