--- a/connexion.html
+++ b/connexion.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/css/main.css" type="text/css">
 </head>
 
 <!-- BODY -->
@@ -19,14 +19,14 @@
             <p><strong>Connectez-vous au service de gestion</strong></p>
         </div>
             <div class="con-form">
-            <form method="POST" action="fournisseur">
+            <form method="POST" action="/fournisseurs">
 
                 <input type="email" id="email" name="email" placeholder="Nom d'utilisateur" class="inputbasic"
                     maxlength="30" required><br>
 
                 <input type="password" id="password" name="password" placeholder="Mot de passe" class="inputbasic"
                     maxlength="30" required><br>
-                
+
                 <input type="submit" id="submit" name="submit" value="S'identifier" />
             </form>
         </div>
@@ -54,7 +54,7 @@
 
     <!-- END FOOTER -->
 
-    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>
 
 </body>
 
