--- a/fichedetaillee.html
+++ b/fichedetaillee.html
@@ -52,6 +52,7 @@
 
     <!-- END-CONTAINER -->
 
+    <!-- SCRIPTS IMPORTATION -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -63,6 +64,7 @@
         crossorigin="anonymous"></script>
 
     <script src="js/main.js"></script>
+    <!--END-SCRIPTS IMPORTATION -->
 </body>
 
 </html>
