ça marche presque

--- a/ajouter.html
+++ b/ajouter.html
@@ -25,7 +25,7 @@
 
         <!-- FORM -->
         <div class="form">
-            <form method="GET" action="/fournisseurs" onSubmit="postFournisseur">
+            <form  onSubmit="postFournisseur">
                 <input type="text" id="name" name="name" placeholder="Nom du fournisseur" class="inputbasic"
                     maxlength="30" required><br>
 
