--- a/connexion.html
+++ b/connexion.html
@@ -19,7 +19,7 @@
             <p><strong>Connectez-vous au service de gestion</strong></p>
         </div>
             <div class="con-form">
-            <form method="GET" action="/fournisseurs">
+            <form method="G" action="/fournisseurs">
 
                 <input type="email" id="email" name="email" placeholder="Nom d'utilisateur" class="inputbasic"
                     maxlength="30" required><br>
